Added Medication registration
